# L-BFGS-B

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Readme.txt  algorithm.ps  compact.ps
examples/: driver1.f  driver2.f  driver3.f
examples/reference/: RES1  RES2  RES3
src/: CMakeLists.txt  blas1.f  dpmeps.f  linpack.f  src.f  testmeps.f90  timer.f
